file(GLOB CGAME_HEADERS "*.h" "*.hpp")

add_library(cgame MODULE 
	"cg_atmospheric.cpp"
	"cg_character.cpp"
	"cg_commandmap.cpp"
	"cg_consolecmds.cpp"
	"cg_debriefing.cpp"
	"cg_draw.cpp"
	"cg_drawCHS.cpp"
	"cg_drawtools.cpp"
	"cg_edv.cpp"
	"cg_effects.cpp"
	"cg_ents.cpp"
	"cg_event.cpp"
	"cg_fireteamoverlay.cpp"
	"cg_fireteams.cpp"
	"cg_flamethrower.cpp"
	"cg_info.cpp"
	"cg_limbopanel.cpp"
	"cg_loadpanel.cpp"
	"cg_localents.cpp"
	"cg_main.cpp"
	"cg_mainext.cpp"
	"cg_manual.cpp"
	"cg_marks.cpp"
	"cg_missionbriefing.cpp"
	"cg_multiview.cpp"
	"cg_newDraw.cpp"
	"cg_particles.cpp"
	"cg_players.cpp"
	"cg_playerstate.cpp"
	"cg_polybus.cpp"
	"cg_popupmessages.cpp"
	"cg_predict.cpp"
	"cg_scoreboard.cpp"
	"cg_servercmds.cpp"
	"cg_snapshot.cpp"
	"cg_sound.cpp"
	"cg_spawn.cpp"
	"cg_statsranksmedals.cpp"
	"cg_syscalls.cpp"
	"cg_timerun.cpp"
	"cg_trails.cpp"
	"cg_view.cpp"
	"cg_weapons.cpp"
	"cg_window.cpp"
	"etj_autodemo_recorder.cpp"
	"etj_awaited_command_handler.cpp"
	"etj_cgaz.cpp"
	"etj_client_authentication.cpp"
	"etj_client_commands_handler.cpp"
	"etj_console_alpha.cpp"
	"etj_cvar_master_drawer.cpp"
	"etj_cvar_shadow.cpp"
	"etj_cvar_update_handler.cpp"
	"etj_demo_recorder.cpp"
	"etj_draw_leaves_handler.cpp"
	"etj_drawable.cpp"
	"etj_entity_events_handler.cpp"
	"etj_event_loop.cpp"
	"etj_inline_command_parser.cpp"
	"etj_keyset_drawer.cpp"
	"etj_keyset_keybind_drawer.cpp"
	"etj_keyset_system.cpp"
	"etj_maxspeed.cpp"
	"etj_operating_system_linux.cpp"
	"etj_operating_system_windows.cpp"
	"etj_overbounce_watcher.cpp"
	"etj_player_events_handler.cpp"
	"etj_quick_follow_drawable.cpp"
	"etj_snaphud.cpp"
	"etj_speed_drawable.cpp"
	"etj_timerun_view.cpp"
	"etj_trickjump_lines.cpp"
	"etj_utilities.cpp"
	"../game/bg_animation.cpp"
	"../game/bg_animgroup.cpp"
	"../game/bg_character.cpp"
	"../game/bg_classes.cpp"
	"../game/bg_misc.cpp"
	"../game/bg_pmove.cpp"
	"../game/bg_sha1.cpp"
	"../game/bg_slidemove.cpp"
	"../game/bg_sscript.cpp"
	"../game/bg_stats.cpp"
	"../game/bg_tracemap.cpp"
	"../game/q_math.cpp"
	"../game/q_shared.cpp"
	"../game/etj_file.cpp"
	"../game/etj_filesystem.cpp"
	"../game/etj_string_utilities.cpp"
	"../game/etj_time_utilities.cpp"
	"../ui/ui_shared.cpp"
	${CGAME_HEADERS}
)
target_compile_definitions(cgame PRIVATE CGAMEDLL)
target_link_libraries(cgame PRIVATE cxx_compiler_opts libjson libsha1 libboost)
set_target_properties(cgame PROPERTIES 
  	LIBRARY_OUTPUT_DIRECTORY "${BASE_DIR_PATH}"
	LIBRARY_OUTPUT_DIRECTORY_DEBUG "${BASE_DIR_PATH}"
	LIBRARY_OUTPUT_DIRECTORY_RELEASE "${BASE_DIR_PATH}")
set_target_lib_suffix(cgame)

set_target_properties(cgame PROPERTIES 
    VS_DEBUGGER_COMMAND "$(ETROOT)\\ET.exe"
	VS_DEBUGGER_COMMAND_ARGUMENTS "+set fs_basepath \"$(SolutionDir)\" +set fs_homepath . +set fs_game ${CMAKE_PROJECT_NAME} +set sv_pure 0"
	VS_DEBUGGER_WORKING_DIRECTORY "$(ETROOT)")
	