file(GLOB CGAME_HEADERS "*.h" "*.hpp")

add_library(cgame MODULE
	"cg_atmospheric.cpp"
	"cg_character.cpp"
	"cg_commandmap.cpp"
	"cg_consolecmds.cpp"
	"cg_draw.cpp"
	"cg_drawtools.cpp"
	"cg_edv.cpp"
	"cg_effects.cpp"
	"cg_ents.cpp"
	"cg_event.cpp"
	"cg_fireteamoverlay.cpp"
	"cg_fireteams.cpp"
	"cg_flamethrower.cpp"
	"cg_info.cpp"
	"cg_limbopanel.cpp"
	"cg_loadpanel.cpp"
	"cg_localents.cpp"
	"cg_main.cpp"
	"cg_marks.cpp"
	"cg_missionbriefing.cpp"
	"cg_multiview.cpp"
	"cg_newDraw.cpp"
	"cg_particles.cpp"
	"cg_players.cpp"
	"cg_playerstate.cpp"
	"cg_polybus.cpp"
	"cg_popupmessages.cpp"
	"cg_predict.cpp"
	"cg_scoreboard.cpp"
	"cg_servercmds.cpp"
	"cg_snapshot.cpp"
	"cg_sound.cpp"
	"cg_spawn.cpp"
	"cg_statsranksmedals.cpp"
	"cg_syscalls.cpp"
	"cg_trails.cpp"
	"cg_view.cpp"
	"cg_weapons.cpp"
	"cg_window.cpp"
	"etj_accel_color.cpp"
	"etj_accelmeter_drawable.cpp"
	"etj_areaindicator_drawable.cpp"
	"etj_autodemo_recorder.cpp"
	"etj_awaited_command_handler.cpp"
	"etj_cgaz.cpp"
	"etj_chs.cpp"
	"etj_client_auth.cpp"
	"etj_client_authentication.cpp"
	"etj_client_commands_handler.cpp"
	"etj_client_rtv_handler.cpp"
	"etj_console_alpha.cpp"
	"etj_crosshair.cpp"
	"etj_crosshair_drawer.cpp"
	"etj_cvar_master_drawer.cpp"
	"etj_cvar_shadow.cpp"
	"etj_cvar_update_handler.cpp"
	"etj_demo_compatibility.cpp"
	"etj_demo_recorder.cpp"
	"etj_draw_leaves_handler.cpp"
	"etj_drawable.cpp"
	"etj_entity_events_handler.cpp"
	"etj_event_loop.cpp"
	"etj_init.cpp"
	"etj_inline_command_parser.cpp"
	"etj_jump_speeds.cpp"
	"etj_keyset_drawer.cpp"
	"etj_keyset_keybind_drawer.cpp"
	"etj_keyset_system.cpp"
	"etj_manual.cpp"
	"etj_maxspeed.cpp"
	"etj_operating_system_linux.cpp"
	"etj_operating_system_macos.cpp"
	"etj_operating_system_windows.cpp"
	"etj_operating_system_macos.cpp"
	"etj_overbounce_detector.cpp"
	"etj_overbounce_shared.cpp"
	"etj_overbounce_watcher.cpp"
	"etj_player_bbox.cpp"
	"etj_player_events_handler.cpp"
	"etj_pmove_utils.cpp"
	"etj_quick_follow_drawable.cpp"
	"etj_rtv_drawable.cpp"
	"etj_savepos.cpp"
	"etj_snaphud.cpp"
	"etj_speed_drawable.cpp"
	"etj_spectatorinfo_drawable.cpp"
	"etj_strafe_quality_drawable.cpp"
	"etj_upper_right_drawable.cpp"
	"etj_upmove_meter_drawable.cpp"
	"etj_timerun.cpp"
	"etj_timerun_view.cpp"
	"etj_trickjump_lines.cpp"
	"etj_utilities.cpp"
	"../game/bg_animation.cpp"
	"../game/bg_animgroup.cpp"
	"../game/bg_character.cpp"
	"../game/bg_classes.cpp"
	"../game/bg_misc.cpp"
	"../game/bg_pmove.cpp"
	"../game/bg_sha1.cpp"
	"../game/bg_slidemove.cpp"
	"../game/bg_sscript.cpp"
	"../game/bg_stats.cpp"
	"../game/bg_tracemap.cpp"
	"../game/q_math.cpp"
	"../game/q_shared.cpp"
	"../game/etj_entity_utilities_shared.cpp"
	"../game/etj_file.cpp"
	"../game/etj_filesystem.cpp"
	"../game/etj_json_utilities.cpp"
	"../game/etj_savepos_shared.cpp"
	"../game/etj_string_utilities.cpp"
	"../game/etj_time_utilities.cpp"
	"../game/etj_timerun_shared.cpp"
	"../game/etj_syscall_ext_shared.cpp"
	"../ui/ui_shared.cpp"
	${CGAME_HEADERS}
)
target_compile_definitions(cgame PRIVATE CGAMEDLL)
target_link_libraries(cgame PRIVATE cxx_compiler_opts libjson libsha1 picosha2 libuuid4 fmt::fmt)

set_target_properties(cgame PROPERTIES
	LIBRARY_OUTPUT_DIRECTORY "${BASE_DIR_PATH}"
	LIBRARY_OUTPUT_DIRECTORY_DEBUG "${BASE_DIR_PATH}"
	LIBRARY_OUTPUT_DIRECTORY_RELEASE "${BASE_DIR_PATH}")
set_target_platform_details(cgame)

if (CMAKE_GENERATOR MATCHES "Visual Studio")
	set_target_properties(cgame PROPERTIES
			VS_DEBUGGER_COMMAND "${ET_PATH}\\${ET_EXE_NAME}"
			VS_DEBUGGER_COMMAND_ARGUMENTS "+set fs_basepath . +set fs_homepath \"${ET_PATH}\" +set fs_game ${CMAKE_PROJECT_NAME}"
			VS_DEBUGGER_WORKING_DIRECTORY "$(SolutionDir)"
	)
endif ()

if(APPLE)
	# These are just for generating the hardware id
	find_library(IOKIT_FRAMEWORK IOKit REQUIRED)
	find_library(COREF_FRAMEWORK CoreFoundation REQUIRED)
	target_link_libraries(cgame PRIVATE ${IOKIT_FRAMEWORK} ${COREF_FRAMEWORK})
endif()
