file(GLOB GAME_HEADERS "*.h" "*.hpp")

add_library(qagame MODULE
	"bg_animation.cpp"
	"bg_animgroup.cpp"
	"bg_character.cpp"
	"bg_classes.cpp"
	"bg_misc.cpp"
	"bg_pmove.cpp"
	"bg_sha1.cpp"
	"bg_slidemove.cpp"
	"bg_sscript.cpp"
	"bg_stats.cpp"
	"bg_tracemap.cpp"
	"g_active.cpp"
	"g_alarm.cpp"
	"g_antilag.cpp"
	"g_buddy_list.cpp"
	"g_character.cpp"
	"g_client.cpp"
	"g_cmds.cpp"
	"g_cmds_ext.cpp"
	"g_combat.cpp"
	"g_fireteams.cpp"
	"g_items.cpp"
	"g_main.cpp"
	"g_match.cpp"
	"g_mem.cpp"
	"g_misc.cpp"
	"g_missile.cpp"
	"g_mover.cpp"
	"g_props.cpp"
	"g_script.cpp"
	"g_script_actions.cpp"
	"g_session.cpp"
	"g_spawn.cpp"
	"g_stats.cpp"
	"g_sv_entities.cpp"
	"g_svcmds.cpp"
	"g_syscalls.cpp"
	"g_systemmsg.cpp"
	"g_target.cpp"
	"g_team.cpp"
	"g_teammapdata.cpp"
	"g_trigger.cpp"
	"g_utilities.cpp"
	"g_utils.cpp"
	"g_vote.cpp"
	"g_weapon.cpp"
	"q_math.cpp"
	"q_shared.cpp"
	"etj_async_operation.cpp"
	"etj_banner_system.cpp"
	"etj_chat_replay.cpp"
	"etj_command_parser.cpp"
	"etj_command_variables.cpp"
	"etj_commands.cpp"
	"etj_custom_map_votes.cpp"
	"etj_database.cpp"
	"etj_database_v2.cpp"
	"etj_deathrun_system.cpp"
	"etj_entity_utilities.cpp"
	"etj_entity_utilities_shared.cpp"
	"etj_file.cpp"
	"etj_filesystem.cpp"
	"etj_fireteam_countdown.cpp"
	"etj_inactivity_timer.cpp"
	"etj_json_utilities.cpp"
	"etj_levels.cpp"
	"etj_log.cpp"
	"etj_main.cpp"
	"etj_main_ext.cpp"
	"etj_map_statistics.cpp"
	"etj_missilepad.cpp"
	"etj_motd.cpp"
	"etj_portalgun.cpp"
	"etj_printer.cpp"
	"etj_progression_tracker.cpp"
	"etj_progression_tracker_parser.cpp"
	"etj_remapshader_handler.cpp"
	"etj_result_set_formatter.cpp"
	"etj_rtv.cpp"
	"etj_save_system.cpp"
	"etj_savepos_command_handler.cpp"
	"etj_savepos_shared.cpp"
	"etj_session.cpp"
	"etj_shader_index_handler.cpp"
	"etj_string_utilities.cpp"
	"etj_syscall_ext_shared.cpp"
	"etj_synchronization_context.cpp"
	"etj_target_ft_setrules.cpp"
	"etj_target_init.cpp"
	"etj_target_spawn_relay.cpp"
	"etj_time_utilities.cpp"
	"etj_timerun_repository.cpp"
	"etj_timerun_v2.cpp"
	"etj_timerun_entities.cpp"
	"etj_timerun_shared.cpp"
	"etj_tokens.cpp"
	"etj_trigger_teleport_client.cpp"
	"etj_user.cpp"
	"etj_utilities.cpp"
	${GAME_HEADERS}
)
target_compile_definitions(qagame PRIVATE GAMEDLL)
target_link_libraries(qagame PRIVATE cxx_compiler_opts libjson libsha1 libsqlite libsqlite_modern_cpp libuuid4 fmt::fmt)
target_link_libraries(qagame PRIVATE $<IF:$<CXX_COMPILER_ID:MSVC>,,pthread>)
set_target_properties(qagame PROPERTIES
	LIBRARY_OUTPUT_DIRECTORY "${BASE_DIR_PATH}"
	LIBRARY_OUTPUT_DIRECTORY_DEBUG "${BASE_DIR_PATH}"
	LIBRARY_OUTPUT_DIRECTORY_RELEASE "${BASE_DIR_PATH}")
set_target_platform_details(qagame)
